--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
 <body>
     <header>
         <nav>
-            <div class="nav-left"></div>
-            <div class="nav-search"></div>
+            <ul class="nav-left">
+                <img class="mobile" src="hamburger.png" alt="">
+                <h1>CMS</h1>
+            </ul>
+            <ul class="nav-modules desktop">
+                <li class="desktop">Academics</li>
+                <li class="desktop">Student Services</li>
+                <li class="desktop">Learning</li>
+                <li class="desktop">Campus Life</li>
+                <li class="desktop">Career and Support</li>
+            </ul>
             <div class="nav-right">
-                <div>👤</div>
-                <div><img src="bell.svg" width="25px" alt=""></div>
+                <img src="icons8-search-100.png" alt="">
+                <img src="icons8-notifications-100.png" alt="">
+                <img src="icons8-male-user-64.png" alt="">
             </div>
         </nav>
     </header>
-    <!-- <main>
+    <main>
         <div class="container">
             <div class="container-items">Home</div>
             <div class="container-items">Leaderboard</div>
@@ -45,9 +55,9 @@
             <div class="container-items">Exam Forms</div>
             <div class="container-items">Events</div>
         </div>
-    </main> -->
+    </main>
     <footer>
-        <div class="container-head">
+        <div class="footer-container-head">
             <h3>Cloud Management Software</h3>
             <p> Designed and built with all the ❤️ in the world by the CMS team with the help of our
                 contributors.<br />
@@ -56,68 +66,40 @@
                 <br>Currently v1.0.0.
             </p>
         </div>
-        <div class="container">
+        <div class="footer-container">
             <ul>
                 <li>
-                    <h3>Academics</h3>
+                    <h3>Contacts</h3>
                 </li>
-                <li>Online Courses</li>
-                <li>Online Exam</li>
-                <li>Acamdemic Planning</li>
-                <li>Time Table</li>
-                <li>Syllabus</li>
+                <li><strong>Address:</strong>Bharati Vidyapeeth's College Of Engineering Kolhapur</li>
+                <li><strong>Tel :</strong> +919999999</li>
+                <li><strong>Email:</strong> aaaaaaaaaa@aaaa.com</li>
             </ul>
         </div>
-        <div class="container">
+        <div class="footer-container">
             <ul>
                 <li>
-                    <h3>Student Services</h3>
+                    <h3>About Us</h3>
                 </li>
-                <li>Applications</li>
-                <li>Fees</li>
-                <li>Exam Forms</li>
-                <li>Certificate Request</li>
-                <li>e-Grievance</li>
+                <li>About CMS</li>
+                <li>Team</li>
+                <li>API</li>
+                <li>Bugs</li>
+                <li>Careers</li>
             </ul>
         </div>
-        <div class="container">
+        <div class="footer-container">
             <ul>
                 <li>
-                    <h3>Learning</h3>
+                    <h3>Social</h3>
                 </li>
-                <li>Leaderboard</li>
-                <li>Assignment</li>
-                <li>Internal Test</li>
-                <li>Institute Feedback</li>
-                <li>Result</li>
-                <li>Library</li>
+                <li>Instagram</li>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Github</li>
+                <li>IDk</li>
             </ul>
         </div>
-        <div class="container">
-            <ul>
-                <li>
-                    <h3>Campus Life</h3>
-                </li>
-                <li>Mentoring</li>
-                <li>Hostel</li>
-                <li>Transport</li>
-                <li>Events</li>
-                <li>Clubs</li>
-                <li>Activities</li>
-            </ul>
-        </div>
-        <div class="container">
-            <ul>
-                <li>
-                    <h3>Career & Support</h3>
-                </li>
-                <li>Training & Placement</li>
-                <li>Internships </li>
-                <li> Projects</li>
-                <li>Achievements</li>
-                <li>Help Desk</li>
-                <li> Support</li>
-            </ul>
     </footer>
 </body>
 
